--- a/final-project.html
+++ b/final-project.html
@@ -77,6 +77,34 @@
       </div>
     </div>
 
+  <div class="video-grid">
+    <div class="video-preview">
+      <div class="thumbnail-row">
+        <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+        <div class="video-time">
+          14:20
+        </div>
+      </div>
+      <div class="video-info-grid">
+        <div class="channel-picture">
+        <img class="profile-picture"  src="channels/channel-1.jpg">
+        </div>
+        <div class="video-info">
+          <p class="video-title">
+          Talking Tech and AI with Google CEO Sundar Pichai!
+          </p>
+      
+          <p class="video-author">
+          Marques Brownlee 
+          </p>
+
+          <p class="video-stats">
+          3.4M views  &#183; 6 months ago
+          </p>
+        </div>
+      </div>
+    </div>
+
 
     <div class="video-preview">
       <div class="thumbnail-row">
